--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "Creates an XML sitemap for the forum",
 	"homepage": "https://tas2580.net/downloads/phpbb-sitemap/",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"keywords": ["phpbb", "extension", "seo", "sitemap"],
 	"license": "GPL-2.0",
 	"authors": [
@@ -22,9 +22,9 @@
 		"phpbb/epv": "dev-master"
 	},
 	"extra": {
-		"display-name": "tas2580 XML Sitemap",
+		"display-name": "XML Sitemap",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.4-RC1,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.4-RC1,<3.2.0@dev"
 		},
 		"version-check": {
 			"host": "phpbb-versionscheck.cf",
