--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,34 @@
 sudo: required
+dist: precise
 
 language: php
 
 matrix:
   include:
-    - php: 5.3.3
-      env: DB=mysqli
-    - php: 5.3
-      env: DB=mysqli # MyISAM
-    - php: 5.4
-      env: DB=mysqli
-    - php: 5.4
-      env: DB=mysql
-    - php: 5.4
-      env: DB=mariadb
-    - php: 5.4
-      env: DB=postgres
     - php: 5.4
       env: DB=sqlite3
     - php: 5.5
-      env: DB=mysqli
+      env: DB=postgres
     - php: 5.6
       env: DB=mysqli
-    - php: hhvm
+    - php: 7.0
+      env: DB=mariadb
+    - php: 7.1
       env: DB=mysqli
-  allow_failures:
-    - php: hhvm
   fast_finish: true
 
 env:
   global:
     - EXTNAME="tas2580/sitemap" # CHANGE name of the extension HERE
     - GITREPO="tas2580/sitemap" # CHANGE name of the repository HERE
-    - SNIFF="1"        # Should we run code sniffer on your code?
-    - IMAGE_ICC="1"    # Should we run icc profile sniffer on your images?
-    - EPV="1"          # Should we run EPV (Extension Pre Validator) on your code?
-    - PHPBB_BRANCH="3.1.x"
+    - SNIFF="1"					# Should we run code sniffer on your code?
+    - IMAGE_ICC="1"				# Should we run icc profile sniffer on your images?
+    - EPV="1"					# Should we run EPV (Extension Pre Validator) on your code?
+    - PHPBB_BRANCH="3.2.x"
 
 branches:
   only:
     - master
-    - develop
 
 install:
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
