--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "tas2580/sitemap",
 	"type": "phpbb-extension",
-	"description": "Creates an XML sitemap for the forum",
+	"description": "Creates an XML sitemap for the forum. You can access the sitemap on {MY_BOARD_URL}/sitemap.xml or {MY_BOARD_URL}/app.php/sitemap.xml.",
 	"homepage": "https://tas2580.net/downloads/phpbb-sitemap/",
 	"version": "0.1.4",
 	"keywords": ["phpbb", "extension", "seo", "sitemap"],
