Modify operation so that forums with many topics are split into 2 or more map files.  This avoids the external limit of 50000 links per xml file, and significantly reduces the sql query time when the sitemap for such a forum is generated.
Also made the generation of sitemaps for viewforum pages optional
(default false) as these do not usually contain content that is
beneficial to the purpose of a sitemap.

Also removed the caching of sql queries, as on reflection, the
benfits are not worthwhile, especially after breaking up the
queries for large forums.

--- a/config/routing.yml
+++ b/config/routing.yml
@@ -2,5 +2,9 @@ tas2580_sitemap_sitemapindex:
     pattern: /sitemap.xml
     defaults: { _controller: tas2580.sitemap.sitemap:index }
 tas2580_sitemap_sitemap:
-    pattern: /sitemap-{id}.xml
+    pattern: /sitemap-{id}-{first}-{last}.xml
     defaults: { _controller: tas2580.sitemap.sitemap:sitemap }
+    requirements:
+        id: '\d+'
+        first: '\d+'
+        last: '\d+'
